public/styles.css
body {
  font-family:
    "Roboto",
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    sans-serif;
  width: 100%;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 24px;
}

h1 {
  text-align: center;
  margin-top: 0;
}

input {
  width: 100%;
  height: 38px;
  margin-left: 4px;
  font-size: 20px;
}

button {
  cursor: pointer;
  width: 100%;
  padding-top: 6px;
  padding-bottom: 6px;
  margin-top: 4px;
  font-size: 24px;
}

a {
  display: block;
  margin-top: 20px;
}

.signup-label {
  display: block;
  width: 250px;
}

.change-password-label {
  display: block;
  width: 400px;
  font-size: 20px;
}

.input-group {
  display: flex;
  margin-bottom: 8px;
  align-items: center;
}

.error {
  color: red;
  font-size: 20px;
}

.logo-wrapper {
  display: flex;
  justify-content: center;
  margin-bottom: -50px;
}

.main-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.online-status {
  color: #00ff00;
  font-weight: 500;
}

.offline-status {
  color: red;
  font-weight: 500;
}

